@@ -2,25 +2,38 @@ package org.terifan.raccoon.document;
 
 import java.io.IOException;
 import java.io.InputStream;
-import static org.terifan.raccoon.document.BinaryEncoder.VERSION;
+import java.lang.reflect.InvocationTargetException;
+import static org.terifan.raccoon.document.SupportedTypes.ARRAY;
+import static org.terifan.raccoon.document.SupportedTypes.DOCUMENT;
+import static org.terifan.raccoon.document.SupportedTypes.TERMINATOR;
 
 
-class BinaryDecoder implements AutoCloseable
+class BinaryDecoder extends BinaryInput
 {
-	private final byte[] mReadBuffer = new byte[8];
-	private MurmurHash3 mChecksum;
-	private InputStream mInputStream;
-
-
-	BinaryDecoder(InputStream aInputStream)
+	public BinaryDecoder(InputStream aInputStream)
 	{
-		mInputStream = aInputStream;
+		super(aInputStream);
+	}
+
+
+	@Override
+	Object readValue(SupportedTypes aType) throws IOException
+	{
+		switch (aType)
+		{
+			case DOCUMENT:
+				return readDocument(new Document());
+			case ARRAY:
+				return readArray(new Array());
+			default:
+				return aType.decoder.decode(this);
+		}
 	}
 
 
 	void unmarshal(KeyValueCollection aContainer) throws IOException
 	{
-		Token token = readFirstToken();
+		Token token = readToken();
 
 		if (aContainer instanceof Document)
 		{
@@ -53,7 +66,7 @@ class BinaryDecoder implements AutoCloseable
 
 	Object unmarshal() throws IOException
 	{
-		Token token = readFirstToken();
+		Token token = readToken();
 
 		switch (token.type)
 		{
@@ -73,298 +86,23 @@ class BinaryDecoder implements AutoCloseable
 	{
 		try
 		{
-			Token token = readFirstToken();
+			Token token = readToken();
 
 			switch (token.type)
 			{
 				case DOCUMENT:
-					return readDocument((Document)aType.newInstance());
+					return readDocument((Document)aType.getConstructor().newInstance());
 				case ARRAY:
-					return readArray((Array)aType.newInstance());
+					return readArray((Array)aType.getConstructor().newInstance());
 				case TERMINATOR:
 					return token.type;
 				default:
 					return readValue(token.type);
 			}
 		}
-		catch (IllegalAccessException | InstantiationException e)
+		catch (IllegalAccessException | InstantiationException | NoSuchMethodException | InvocationTargetException e)
 		{
 			throw new IOException(e);
 		}
-	}
-
-
-	private Token readFirstToken() throws IOException, StreamException
-	{
-		Token token;
-
-		if (mChecksum == null)
-		{
-			mChecksum = new MurmurHash3(VERSION);
-			token = readToken();
-			if (token.value != VERSION)
-			{
-				throw new StreamException("Unsupported stream encoding version: " + token.value);
-			}
-		}
-		else
-		{
-			token = readToken();
-			if (token.value != token.checksum)
-			{
-				throw new StreamException("Checksum error in data stream");
-			}
-		}
-
-		return token;
-	}
-
-
-	int readByte() throws IOException
-	{
-		int c = mInputStream.read();
-		if (c == -1)
-		{
-			throw new StreamException("Premature end of stream");
-		}
-		mChecksum.updateByte(c);
-		return c;
-	}
-
-
-	short readShort() throws IOException
-	{
-		return (short)((readByte() << 8) | readByte());
-	}
-
-
-	int readInt() throws IOException
-	{
-		readBytes(mReadBuffer, 0, 4);
-		return ((mReadBuffer[0] & 0xff) << 24)
-			+ ((mReadBuffer[1] & 0xff) << 16)
-			+ ((mReadBuffer[2] & 0xff) << 8)
-			+ ((mReadBuffer[3] & 0xff) << 0);
-	}
-
-
-	long readLong() throws IOException
-	{
-		readBytes(mReadBuffer, 0, 8);
-		return (((long)(mReadBuffer[0] & 0xff) << 56)
-			+ ((long)(mReadBuffer[1] & 0xff) << 48)
-			+ ((long)(mReadBuffer[2] & 0xff) << 40)
-			+ ((long)(mReadBuffer[3] & 0xff) << 32)
-			+ ((long)(mReadBuffer[4] & 0xff) << 24)
-			+ ((mReadBuffer[5] & 0xff) << 16)
-			+ ((mReadBuffer[6] & 0xff) << 8)
-			+ ((mReadBuffer[7] & 0xff) << 0));
-	}
-
-
-	byte[] readBytes(byte[] aBuffer) throws IOException
-	{
-		int len = mInputStream.read(aBuffer);
-		mChecksum.updateBytes(aBuffer, 0, len);
-		return aBuffer;
-	}
-
-
-	byte[] readBytes(byte[] aBuffer, int aOffset, int aLength) throws IOException
-	{
-		int len = mInputStream.read(aBuffer, aOffset, aLength);
-		mChecksum.updateBytes(aBuffer, aOffset, aLength);
-		if (len != aLength)
-		{
-			throw new IOException("Error reading from underlying stream.");
-		}
-		return aBuffer;
-	}
-
-
-	Document readDocument(Document aDocument) throws IOException
-	{
-		for (;;)
-		{
-			Token token = readToken();
-
-			if (token.type == SupportedTypes.TERMINATOR)
-			{
-				if (token.value != token.checksum)
-				{
-					throw new StreamException("Checksum error in data stream");
-				}
-				break;
-			}
-
-			String key = readUTF(token.value);
-
-			aDocument.putImpl(key, readValue(token.type));
-				}
-
-		return aDocument;
-	}
-
-
-	Array readArray(Array aArray) throws IOException
-	{
-		for (;;)
-		{
-			Token token = readToken();
-
-			if (token.type == SupportedTypes.TERMINATOR)
-			{
-				if (token.value != token.checksum)
-				{
-					throw new StreamException("Checksum error in data stream");
-				}
-				break;
-			}
-
-			for (int i = 0; i < token.value; i++)
-			{
-				aArray.add(readValue(token.type));
-					}
-				}
-
-		return aArray;
-	}
-
-
-	private Object readValue(SupportedTypes aType) throws IOException
-	{
-		return aType.decoder.decode(this);
-	}
-
-
-	private Token readToken() throws IOException
-	{
-		int checksum = getChecksumValue();
-		long params = readInterleaved();
-
-		try
-		{
-			Token token = new Token();
-			token.checksum = checksum;
-			token.value = (int)(params >>> 32);
-			token.type = SupportedTypes.values()[(int)params];
-			return token;
-		}
-		catch (ArrayIndexOutOfBoundsException e)
-		{
-			throw new StreamException("Type parameter out of range");
-		}
-	}
-
-
-	private static class Token
-	{
-		int value;
-		int checksum;
-		SupportedTypes type;
-	}
-
-
-	long readVarint() throws IOException
-	{
-		for (long n = 0, result = 0; n < 64; n += 7)
-		{
-			int b = readByte();
-			result += (long)(b & 127) << n;
-			if (b < 128)
-			{
-				return (result >>> 1) ^ -(result & 1);
-			}
-		}
-
-		throw new StreamException("Variable int64 exceeds maximum length");
-	}
-
-
-	long readUnsignedVarint() throws IOException
-	{
-		for (long n = 0, result = 0; n < 64; n += 7)
-		{
-			int b = readByte();
-			result += (long)(b & 127) << n;
-			if (b < 128)
-			{
-				return result;
-			}
-		}
-
-		throw new StreamException("Variable int64 exceeds maximum length");
-	}
-
-
-	String readUTF(int aLength) throws IOException
-	{
-		if (aLength < 0)
-		{
-			throw new StreamException("Negative string length");
-		}
-
-		char[] output = new char[aLength];
-
-		for (int i = 0; i < output.length; i++)
-		{
-			int c = readByte();
-
-			if (c < 128) // 0xxxxxxx
-			{
-				output[i] = (char)c;
-			}
-			else if ((c & 0xE0) == 0xC0) // 110xxxxx
-			{
-				output[i] = (char)(((c & 0x1F) << 6) | (readByte() & 0x3F));
-			}
-			else if ((c & 0xF0) == 0xE0) // 1110xxxx
-			{
-				output[i] = (char)(((c & 0x0F) << 12) | ((readByte() & 0x3F) << 6) | (readByte() & 0x3F));
-			}
-			else
-			{
-				throw new StreamException("This decoder only handles 16-bit characters: c = " + c);
-			}
-		}
-
-		return new String(output);
-	}
-
-
-	long readInterleaved() throws IOException
-	{
-		long p = readUnsignedVarint();
-		return (reverseShift(p) << 32) | reverseShift(p >>> 1);
-	}
-
-
-	private static long reverseShift(long aWord)
-	{
-		aWord &= 0x5555555555555555L;
-
-		aWord = (aWord | (aWord >> 1)) & 0x3333333333333333L;
-		aWord = (aWord | (aWord >> 2)) & 0x0f0f0f0f0f0f0f0fL;
-		aWord = (aWord | (aWord >> 4)) & 0x00ff00ff00ff00ffL;
-		aWord = (aWord | (aWord >> 8)) & 0x0000ffff0000ffffL;
-		aWord = (aWord | (aWord >> 16)) & 0x00000000ffffffffL;
-
-		return aWord;
-	}
-
-
-	/**
-	 * Does not close the underlying stream.
-	 */
-	@Override
-	public void close() throws IOException
-	{
-		mInputStream = null;
-	}
-
-
-	private int getChecksumValue()
-	{
-		return mChecksum.getValue() & 0b1111;
 	}
 }
